--- a/.github/workflows/inventory-ci.yaml
+++ b/.github/workflows/inventory-ci.yaml
@@ -28,7 +28,7 @@ jobs:
                fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
          -  uses: ./.github/workflows/actions
          -  name: Run Maven Build Command
-            run: mvn clean install -pl inventory -am -DskipTests
+            run: mvn clean install -pl inventory-service -am -DskipTests
          #         -  name: Run Maven Test
          #            run: mvn test -f inventory
          #         -  name: Unit Test Results
