--- a/.github/workflow-template.yaml
+++ b/.github/workflow-template.yaml
@@ -22,6 +22,11 @@ jobs:
       runs-on: ubuntu-latest
       env:
          FROM_ORIGINAL_REPOSITORY: ${{ github.event.pull_request.head.repo.full_name == github.repository || github.ref == 'refs/heads/main' }}
+      permissions:
+         contents: read
+         packages: write
+         attestations: write
+         id-token: write
       steps:
          -  uses: actions/checkout@v4
             with:
