--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,19 +27,27 @@ services:
       container_name: kafka
       ports:
          - '9094:9094'
+      #      environment:
+      #         - KAFKA_ENABLE_KRAFT=yes
+      #         - KAFKA_CFG_PROCESS_ROLES=controller,broker
+      #         - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      #         - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+      #         - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      #         - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT:kafka:9094,EXTERNAL://localhost:9094
+      #         - KAFKA_BROKER_ID=1
+      #         - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
+      #         - ALLOW_PLAINTEXT_LISTENER=yes
+      #         - KAFKA_CFG_NODE_ID=1
+      #         - KAFKA_KRAFT_CLUSTER_ID=kafka
+      #         - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
       environment:
-         - KAFKA_ENABLE_KRAFT=yes
+         - KAFKA_CFG_NODE_ID=0
          - KAFKA_CFG_PROCESS_ROLES=controller,broker
-         - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+         - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
          - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+         - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
          - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
-         - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://127.0.01:9094,EXTERNAL://localhost:9094
-         - KAFKA_BROKER_ID=1
-         - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@127.0.0.1:9093
-         - ALLOW_PLAINTEXT_LISTENER=yes
-         - KAFKA_CFG_NODE_ID=1
-         - KAFKA_KRAFT_CLUSTER_ID=kafka
-         - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+         - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       healthcheck:
          test: [ "CMD", "kafka-topics.sh", "--list", "--bootstrap-server", "localhost:9094" ]
          interval: 10s
@@ -107,15 +115,16 @@ services:
          - '8888:8888'
       environment:
          - IDENTITY_BASE_URL=http://scms-identity:8083
-      #         - FILE_SERVICE_URL=http://scms-file:8887
-      #         - NOTIFICATION_SERVICE_URL=http://scms-notification:8886
-      #         - CART_SERVICE_URL=http://scms-cart:8081
-      #         - PROFILE_SERVICE_URL=http://scms-profile:8082
-      #         - PRODUCT_SERVICE_URL=http://scms-product:8084
-      #         - RATING_SERVICE_URL=http://scms-rating:8085
-      #         - INVENTORY_SERVICE_URL=http://scms-inventory:8086
-      #         - ORDER_SERVICE_URL=http://scms-order:8087
-      #         - SHIPPING_SERVICE_URL=http://scms-shipping:8088
+         - FILE_SERVICE_URL=http://scms-file:8887
+         - NOTIFICATION_SERVICE_URL=http://scms-notification:8886
+         - CART_SERVICE_URL=http://scms-cart:8081
+         - PROFILE_SERVICE_URL=http://scms-profile:8082
+         - IDENTITY_SERVICE_URL=http://scms-identity:8083
+         - PRODUCT_SERVICE_URL=http://scms-product:8084
+         - RATING_SERVICE_URL=http://scms-rating:8085
+         - INVENTORY_SERVICE_URL=http://scms-inventory:8086
+         - ORDER_SERVICE_URL=http://scms-order:8087
+         - SHIPPING_SERVICE_URL=http://scms-shipping:8088
       networks:
          - scms-network
    scms-file:
@@ -126,7 +135,7 @@ services:
       ports:
          - '8887:8887'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=kafka:9094
+         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
          - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
          - AWS_SECRET=${AWS_SECRET}
          - S3_BUCKET_NAME=${S3_BUCKET_NAME}
@@ -142,7 +151,7 @@ services:
       ports:
          - '8886:8886'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=kafka:9094
+         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
          - MAIL_API_KEY=${MAIL_API_KEY}
          - MONGODB_URI=mongodb://root:root@mongodb:27017/notification_service?authSource=admin
       #         - EMAIL_SERVICE_URL
@@ -159,9 +168,9 @@ services:
       ports:
          - '8081:8081'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=kafka:9094
+         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
          - MONGODB_URI=mongodb://root:root@mongodb:27017/cart_service?authSource=admin
-      #         - PRODUCT_SERVICE_URL=http://scms-product:8084
+         - PRODUCT_SERVICE_URL=http://scms-product:8084
       depends_on:
          - kafka
          - mongodb
@@ -175,7 +184,7 @@ services:
       ports:
          - '8082:8082'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=kafka:9094
+         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
          - NEO4J_URI=bolt://neo4j:7687
          - NEO4J_USERNAME=neo4j
          - NEO4J_PASSWORD=admin
@@ -192,12 +201,12 @@ services:
       ports:
          - '8083:8083'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=kafka:9094
+         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
          - DBMS_URL=jdbc:mysql://mysql:3306/identity_service
          - DBMS_USERNAME=root
          - DBMS_PASSWORD=root
-      #         - PROFILE_SERVICE_URL=http://scms-profile:8082
-      #         - FILE_SERVICE_URL=http://scms-file:8887
+         - PROFILE_SERVICE_URL=http://scms-profile:8082
+         - FILE_SERVICE_URL=http://scms-file:8887
       #         - JWT_SIGNER_KEY
       #         - JWT_VALID_DURATION
       #         - JWT_REFRESHABLE_DURATION
@@ -214,9 +223,9 @@ services:
       ports:
          - '8084:8084'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=kafka:9094
+         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
          - MONGODB_URI=mongodb://root:root@mongodb:27017/product_service?authSource=admin
-      #         - PROFILE_SERVICE_URL=http://scms-profile:8082
+         - PROFILE_SERVICE_URL=http://scms-profile:8082
       depends_on:
          - kafka
          - mongodb
@@ -230,10 +239,10 @@ services:
       ports:
          - '8085:8085'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=kafka:9094
+         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
          - MONGODB_URI=mongodb://root:root@mongodb:27017/rating_service?authSource=admin
-      #         - PROFILE_SERVICE_UR= http://scms-profile:8082
-      #         - IDENTITY_SERVICE_URL=http://scms-identity:8083
+         - PROFILE_SERVICE_UR= http://scms-profile:8082
+         - IDENTITY_SERVICE_URL=http://scms-identity:8083
       depends_on:
          - kafka
          - mongodb
@@ -247,11 +256,11 @@ services:
       ports:
          - '8086:8086'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=kafka:9094
+         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
          - DBMS_URL=jdbc:mysql://mysql:3306/inventory_service
          - DBMS_USERNAME=root
          - DBMS_PASSWORD=root
-      #         - PRODUCT_SERVICE_URL=http://scms-product:8084
+         - PRODUCT_SERVICE_URL=http://scms-product:8084
       depends_on:
          - kafka
          - mysql
@@ -265,14 +274,14 @@ services:
       ports:
          - '8087:8087'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=kafka:9094
+         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
          - DBMS_URL=jdbc:mysql://mysql:3306/order_service
          - DBMS_USERNAME=root
          - DBMS_PASSWORD=root
          - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
-      #         - IDENTITY_SERVICE_URL=http://scms-identity:8083
-      #         - PRODUCT_SERVICE_URL=http://scms-product:8084
-      #         - INVENTORY_SERVICE_URL=http://scms-inventory:8086
+         - IDENTITY_SERVICE_URL=http://scms-identity:8083
+         - PRODUCT_SERVICE_URL=http://scms-product:8084
+         - INVENTORY_SERVICE_URL=http://scms-inventory:8086
       depends_on:
          - kafka
          - mysql
@@ -286,9 +295,9 @@ services:
       ports:
          - '8088:8088'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=kafka:9094
+         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
          - MONGODB_URI=mongodb://root:root@mongodb:27017/shipping_service?authSource=admin
-      #         - IDENTITY_SERVICE_URL=http://scms-identity:8083
+         - IDENTITY_SERVICE_URL=http://scms-identity:8083
       depends_on:
          - kafka
          - mongodb
