--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,27 +27,19 @@ services:
       container_name: kafka
       ports:
          - '9094:9094'
-      #      environment:
-      #         - KAFKA_ENABLE_KRAFT=yes
-      #         - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      #         - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      #         - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-      #         - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      #         - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT:kafka:9094,EXTERNAL://localhost:9094
-      #         - KAFKA_BROKER_ID=1
-      #         - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
-      #         - ALLOW_PLAINTEXT_LISTENER=yes
-      #         - KAFKA_CFG_NODE_ID=1
-      #         - KAFKA_KRAFT_CLUSTER_ID=kafka
-      #         - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
       environment:
-         - KAFKA_CFG_NODE_ID=0
+         - KAFKA_ENABLE_KRAFT=yes
          - KAFKA_CFG_PROCESS_ROLES=controller,broker
-         - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
-         - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-         - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
-         - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
          - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+         - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+         - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
+         - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
+         - KAFKA_BROKER_ID=1
+         - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
+         - ALLOW_PLAINTEXT_LISTENER=yes
+         - KAFKA_CFG_NODE_ID=1
+         - KAFKA_KRAFT_CLUSTER_ID=kafka
+         - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
       healthcheck:
          test: [ "CMD", "kafka-topics.sh", "--list", "--bootstrap-server", "localhost:9094" ]
          interval: 10s
