--- a/.github/workflows/gateway-ci.yaml
+++ b/.github/workflows/gateway-ci.yaml
@@ -33,7 +33,7 @@ jobs:
                fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
          -  uses: ./.github/workflows/actions
          -  name: Run Maven Build Command
-            run: mvn clean install -pl api-gateway -am -DskipTests
+            run: mvn clean install -pl gateway-service -am -DskipTests
          #         -  name: Run Maven Test
          #            run: mvn test -f gateway
          #         -  name: Unit Test Results
